--- a/webapps/root/css/common.css
+++ b/webapps/root/css/common.css
@@ -90,7 +90,7 @@ textarea{
 .List_Search_Result{padding:1px; height:503px;}
 .List_Main_UserInfo_Thumbnail{ float:left; width:120px; height:60px; padding:1px; text-align:center; color:#666; line-height:24px}
 .List_Main_UserInfo_Thumbnail_S{ float:left; width:120px; height:50px; padding:1px; text-align:center; color:#666; line-height:24px}
-.List_Main_UserInfo_Thumbnail_File{width:185px;}
+.List_Main_UserInfo_Thumbnail_File{width:185px;margin:5px 0 0 5px;}
 .List_Main_UserInfo_Thumbnail_File_Table{width:240px;}
 .List_Main_UserInfo_Thumbnail_File_S{width:200px;height:50px;}
 .List_Main_UserInfo_Thumbnail_File_Background{ width:100%; background:url(../images/list/seltable.jpg);}
